// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`OpenIdConfiguration > should accept the values a remote provider advertises 1`] = `
{
  "authorizationEndpoint": "https://test.lindorm.io/oauth/authorize",
  "grantTypesSupported": [
    "authorization_code",
    "urn:acme:params:oauth:grant-type",
  ],
  "idTokenSigningAlgValuesSupported": [
    "RS256",
    "Ed448",
  ],
  "issuer": "https://test.lindorm.io",
  "jwksUri": "https://test.lindorm.io/.well-known/jwks.json",
  "responseTypesSupported": [
    "code",
  ],
  "scopesSupported": [
    "openid",
    "profile",
    "name",
    "picture",
    "identities",
  ],
  "subjectTypesSupported": [
    "public",
    "client",
    "identity",
  ],
  "tokenEndpoint": "https://test.lindorm.io/oauth/token",
}
`;

exports[`OpenIdConfiguration > should match snapshot for the spec-minimal document 1`] = `
{
  "authorizationEndpoint": "https://test.lindorm.io/oauth/authorize",
  "idTokenSigningAlgValuesSupported": [
    "RS256",
  ],
  "issuer": "https://test.lindorm.io",
  "jwksUri": "https://test.lindorm.io/.well-known/jwks.json",
  "responseTypesSupported": [
    "code",
  ],
  "subjectTypesSupported": [
    "public",
  ],
  "tokenEndpoint": "https://test.lindorm.io/oauth/token",
}
`;

exports[`OpenIdConfiguration > should satisfy the amphora issuer read 1`] = `
[
  "https://test.lindorm.io",
  "https://test.lindorm.io/.well-known/jwks.json",
]
`;

exports[`OpenIdConfiguration > should satisfy the pylon relying-party read 1`] = `
{
  "optional": [
    undefined,
    undefined,
    undefined,
    undefined,
  ],
  "required": [
    "https://test.lindorm.io/oauth/authorize",
    "https://test.lindorm.io/oauth/token",
  ],
}
`;

exports[`OpenIdConfiguration > should serve the RFC-correct endpoint names 1`] = `
{
  "authorizationEndpoint": "https://test.lindorm.io/oauth/authorize",
  "endSessionEndpoint": "https://test.lindorm.io/oauth/end-session",
  "idTokenSigningAlgValuesSupported": [
    "RS256",
  ],
  "introspectionEndpoint": "https://test.lindorm.io/oauth/introspection",
  "issuer": "https://test.lindorm.io",
  "jwksUri": "https://test.lindorm.io/.well-known/jwks.json",
  "responseTypesSupported": [
    "code",
  ],
  "revocationEndpoint": "https://test.lindorm.io/oauth/revocation",
  "subjectTypesSupported": [
    "public",
  ],
  "tokenEndpoint": "https://test.lindorm.io/oauth/token",
}
`;

exports[`OpenIdConfiguration > should serve the draft authorization challenge endpoint 1`] = `
{
  "authorizationChallengeEndpoint": "https://test.lindorm.io/oauth/authorize-challenge",
  "authorizationEndpoint": "https://test.lindorm.io/oauth/authorize",
  "idTokenSigningAlgValuesSupported": [
    "RS256",
  ],
  "issuer": "https://test.lindorm.io",
  "jwksUri": "https://test.lindorm.io/.well-known/jwks.json",
  "responseTypesSupported": [
    "code",
  ],
  "subjectTypesSupported": [
    "public",
  ],
  "tokenEndpoint": "https://test.lindorm.io/oauth/token",
}
`;

exports[`OpenIdConfiguration > should serve the lindorm extension endpoints 1`] = `
{
  "authorizationEndpoint": "https://test.lindorm.io/oauth/authorize",
  "deviceAuthorizationEndpoint": "https://test.lindorm.io/oauth/device/code",
  "gdprRightOfAccessEndpoint": "https://test.lindorm.io/gdpr/disclosure",
  "gdprRightToDataPortabilityEndpoint": "https://test.lindorm.io/gdpr/portability",
  "gdprRightToErasureEndpoint": "https://test.lindorm.io/gdpr/erasure",
  "idTokenSigningAlgValuesSupported": [
    "RS256",
  ],
  "issuer": "https://test.lindorm.io",
  "jwksUri": "https://test.lindorm.io/.well-known/jwks.json",
  "responseTypesSupported": [
    "code",
  ],
  "subjectTypesSupported": [
    "public",
  ],
  "tokenEndpoint": "https://test.lindorm.io/oauth/token",
}
`;
